Fix cover moving behind

--- a/showpony/styles.css
+++ b/showpony/styles.css
@@ -36,6 +36,7 @@
 .s-cover{
 	width:100%;
 	height:100%;
+	position:absolute;
 	object-fit:cover;
 }
 
